css/css.css
/* Variable declarations */

:root {
    --my-color-background: limegreen;
    --my-color-footer: rgb(255, 255, 255);
    --my-color-footer-border-top: rgb(250, 132, 43);
    --my-color-header: rgb(255, 255, 255);
    --my-color-lines: rgb(205, 205, 205);
    --my-color-main: rgb(255, 255, 255);
    --my-height-footer: 50px;
    --my-height-header: 60px;
    --my-height-list-item: 70px;
    --my-size-img: 50px;
    --my-size-imgbutton: 40px;
    --my-size-imgbutton-img: 28px;
    --my-size-img-tiles: 100px;
    --my-spacing-0: 0px;
    --my-spacing-6: 6px;
    --my-spacing-10: 10px;
}

html, body {
    background-color: var(--my-color-background);
    margin: var(--my-spacing-0);
    font-family: "Avenir Medium", sans-serif;
    color: rgb(0, 0, 0);
    width: 100%;
    max-width: 100%;
    height: 100%;
    max-height: 100%;
}

/* Block text selection */

* {
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    box-sizing: border-box;
}

/* Base structure */

header {
    background-color: var(--my-color-header);
    height: var(--my-height-header);
}

main {
    background-color: var(--my-color-main);
    height: calc(100% - (var(--my-height-header) + var(--my-height-footer)));
}

footer {
    background-color: var(--my-color-footer);
    height: var(--my-height-footer);
    padding-left: var(--my-spacing-10);
    padding-right: var(--my-spacing-10);
}

/* Main scrolling */

p {
    margin: var(--my-spacing-0);
    padding: var(--my-spacing-10);
}

main {
    overflow-y: auto;
}

/* Heading */

h1 {
    font-size: 20pt;
    display: inline-block;
    margin: var(--my-spacing-0);
    padding-left: var(--my-spacing-6);
    padding-right: var(--my-spacing-6);
    font-weight: normal;
    line-height: var(--my-height-header);
}

header {
    padding-right: var(--my-spacing-10);
    padding-left: var(--my-spacing-10);
    border-bottom: 5px solid var(--my-color-lines);
}

/* Footing */

footer {
    border-top: 4px solid var(--my-color-footer-border-top);
}

/* Left|right alignment, imgbuttons */

.imgbutton {
    margin-right: var(--my-spacing-10);
    border: none;
    background-color: transparent;
    color: transparent;
    filter: invert(60%);
    height: var(--my-size-imgbutton);
    width: var(--my-size-imgbutton);
    background-size: var(--my-size-imgbutton-img) auto;
    background-repeat: no-repeat;
    background-position: center;
}

header .imgbutton {
    margin-top: calc((var(--my-height-header) - var(--my-size-imgbutton)) / 2);
}

footer .imgbutton {
    margin-top: calc((var(--my-height-footer) - var(--my-size-imgbutton)) / 2);
}

.imgbutton.add-button{
    margin-right: var(--my-spacing-0);
}

.align-left {
    float: left;
}

.align-right {
    float: right;
}

.menu-button {
    background-image: url('./img/glyphicons/png/glyphicons-517-menu-hamburger.png');
}

.tile-button {
    background-image: url('./img/glyphicons/png/glyphicons-157-show-thumbnails.png');
}

.add-button {
    background-image: url('./img/glyphicons/png/glyphicons-433-plus.png');
}

.logout-button {
    background-image: url('./img/glyphicons/png/glyphicons-388-log-out.png');
}

.refresh-button {
    background-image: url('./img/glyphicons/png/glyphicons-82-refresh.png');
}

.edit-button {
    background-image: url('./img/glyphicons/png/glyphicons-31-pencil.png');
}

/* List view */

main ul {
    list-style: none;
    padding: 0px;
    margin: 0px;
}

main li {
    height: var(--my-height-list-item);
    line-height: var(--my-height-list-item);
    border-bottom: 1px solid var(--my-color-lines);
    padding-left: 15px;
    padding-right: 10px;
    font-size: 20pt;
}

main li .imgbutton {
    margin-top: calc((var(--my-height-list-item) - var(--my-size-imgbutton)) / 2);
}

main h2 {
    display: inline-block;
    font-weight: normal;
    margin: 0px;
    font-size: 20pt;
}

main li img {
    height: var(--my-size-img);
    width: var(--my-size-img);
    object-fit: cover;
    margin-top: calc((var(--my-height-list-item) - var(--my-size-img)) / 2);
    margin-right: 10px;
}

/* Tiles */

.tiles li {
    display: inline-block;
    border-bottom: none;
    padding-left: 0px;
    padding-right: 0px;
    height: calc(var(--my-size-img-tiles) + 10px);
}

.tiles li * {
    display: none;
}

.tiles li img {
    display: block;
    height: var(--my-size-img-tiles);
    width: var(--my-size-img-tiles);
}

.tiles main {
    padding-left: 10px;
}

/* Fade in|out */

main.faded {
    opacity: 0;
    transition: opacity 2s;
}

main {
    opacity: 1;
    transition: opacity 1s;
}

